name:                tic-tac-toe-gloss
version:             0.1.0.0
-- synopsis:
description:         tic tac toe with gloss for two players
homepage:            https://github.com/githubuser/tic-tac-toe-gloss#readme
license:             BSD3
license-file:        LICENSE
author:              Fun Redoc
maintainer:          example@example.com
copyright:           2019 Fun Redoc
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tic-tac-toe-gloss
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  other-modules:       Rendering
                       , Communication
                       , Game
  build-depends:       base >= 4.7 && < 5
                       , gloss
                       , mtl
                       , array
                       , lens
                       , websockets
                       , network
                       , cereal
